src/objects/Aync_Task__c.object
<CustomObject>
    <fields>
        <fullName>Aync_Job__c</fullName>
        <label>Aync Job</label>
        <referenceTo>Aync_Job__c</referenceTo>
        <relationshipLabel>Aync Tasks</relationshipLabel>
        <relationshipName>Aync_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Aync Task</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Aync Task Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aync Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>